#5774 closed bug (fixed)
[Tracker] EditBox shown to edit default "New folder" is at the wrong place after using Alt+N
Reported by: | oco | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #5842 | |
Platform: | All |
Description
Steps to reproduce :
- Alt+N to create a new directory in a view with at least another one directory. The existing directory name should be before "New folder" in the alphabetical order to reproduce.
A new folder is created with the name "New folder" but the corresponding EditBox is shown on top of an existing entry instead of the "New folder" one. You can see previous item if you delete the text in the EditBox.
There is no problem if the view only contain files.
Attachments (1)
Change History (6)
by , 12 years ago
comment:1 by , 12 years ago
Summary: | EditBox shown to edit default "New folder" is at the wrong place after using Alt+N → [Tracker] EditBox shown to edit default "New folder" is at the wrong place after using Alt+N |
---|
comment:2 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Version: | R1/alpha1 → R1/Development |
comment:4 by , 12 years ago
As a note this problem was also observable with only files. However, the "List Folders First" option had to be disabled for that to occur, since otherwise the folder would implicitly wind up at index 0 regardless of its name, thus masking the problem.
comment:5 by , 12 years ago
Blocking: | 5842 added |
---|
Note:
See TracTickets
for help on using tickets.
Looking into it.